1998-10-08  Stefan Taferner  <taferner@kde.org> (KMail-1.0.5)

	* Sorting messages: replaced sorting algorithm, which caused
	random hangs, with stock qsort -- hopefully working now ;-)

	* Fixed: folder list went out of scope (current item pointing to
	nowhere) when folder was deleted.

	* Composer: fixed broken confirm-close dialog.

	* Increased version to better match upcoming Kde-1.1 release.

	* Added call to kapp->quit() when last window is closed.

1998-09-26  Stefan Taferner  <taferner@kde.org> (KMail-0.8.1)

	* Fixed crash upon close of a main- or composer window.
	Bug seems to be introduced by changed behaviour of KTMainWindow.
	Still KMail crashes when you click on any message afterwards.

	* Addressbook: finally fixed bug in not reading last line.
	Thanks to all who reported!

	* Replaced occurances of KTopLevelWidget with KTMainWindow.

1998-09-21  Markus Wuebben  <markus@office.DInet.de>

	* added a short cut for mail checking

1998-09-12  Markus Wuebben  <markus@kde.org>

	* some nice little fixes

1998-09-11  Juraj Bednar    <bednar@isternet.sk>

	* finally wrote PGP replying and forwarding decryption
	* PGP 5.0i should work now with no problems (should ;-)

Sun Sep  6 19:20:34 1998  Markus Wuebben  <mason@HoneyBunny.uni-dortmund.de>

	* kmacctpop.cpp (setPasswd): Fixed password problem.

Sun Sep  6 18:28:45 1998  Markus Wuebben  <markus@kde.org>

	* kmreaderwin.cpp :  Finally fixed attachment problem

1998-07-31  Markus Wuebben  <markus@kde.org>

	* kmsettings.cpp / kmmainwin.cpp Implemented send mail on check.
	* kmacctlocal.cpp (processNewMail): Added message box
	warning if mail folder was not found.

	* kmmainwin.cpp Added editing of message in outbox folder.
	* kmfolderdlg.cpp Removed out of index warning
	

1998-07-23  Stefan Taferner  <taferner@kde.org>

	* Added message status "Read". This status is set to
	messages which are loaded with check-mail that have
	status set to "R".
	
	These messages appear whith blue text, but without